{
    "version": 1,
    "name": "Inventory",
    "maps": [
        {
            "name": "InventoryMap",
            "id": "6e172212-a191-46c1-a0de-f2bcb89df505",
            "actions": [
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "b49da0f1-a666-4a98-8214-054b092db1c7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ManeuverInventory",
                    "type": "Button",
                    "id": "e6ab780a-f24a-4459-a150-52130c219354",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fddaa5c0-0d60-4522-a52f-dd6d56011f0b",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85364420-9588-44fb-87cc-99a2d40e9afe",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ManeuverInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}